--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup .NET SDK 6.0
-      - uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v1
         with:
             dotnet-version: 6.0.x
       - name: Build
