--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,4 +11,4 @@ jobs:
             dotnet-version: 6.0.x
       - name: Build
         run: |
-          dotnet build --configuration Release --os win10-x64
+          dotnet build --configuration Release --os win10
