--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Build
         run: |
           nuget restore
-          dotnet build
+          dotnet build ShapesBalanceXamFormsApp/ShapesBalanceXamFormsApp.csproj
