--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,13 +5,11 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Restore packages
+      - name: Setup .NET SDK 6.0
+        uses: actions/setup-dotnet@v1
+        with:
+            dotnet-version: 6.0.x
+      - name: Build
         run: |
           nuget restore
-      - name: Build-windows
-        run: |
-          msbuild ShapesBalanceXamFormsApp/ShapesBalanceXamFormsApp.csproj /verbosity:normal /t:Rebuild /p:Configuration=Debug
-      - name: Build-Android
-        run: |
-          nuget restore
-          msbuild ShapesBalanceXamFormsApp.Android/ShapesBalanceXamFormsApp.Android.csproj /verbosity:normal /t:Rebuild /p:Configuration=Debug
+          dotnet build ShapesBalanceXamFormsApp/ShapesBalanceXamFormsApp.csproj
