--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,3 +13,7 @@ jobs:
         run: |
           nuget restore
           dotnet build ShapesBalanceXamFormsApp/ShapesBalanceXamFormsApp.csproj
+      - name: Build for GTK
+        run: |
+          sudo apt install -y libgtk2.0-cil-dev
+          dotnet build GTK/GTK.csproj
