--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,5 +15,5 @@ jobs:
           dotnet build ShapesBalanceXamFormsApp/ShapesBalanceXamFormsApp.csproj
       - name: Build for GTK
         run: |
-          apt install -y libgtk2.0-cil-dev
+          sudo apt-get install -y libgtk2.0-cil-dev
           dotnet build GTK/GTK.csproj
