--- a/GTK/GTK.csproj
+++ b/GTK/GTK.csproj
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFramework>net47</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
   </PropertyGroup>
 
