--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,15 +22,12 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
             dotnet-version: 6.0.x
-      - name: Add dependencies
+      - name: install dependencies
         run: |
-          sudo apt update
-          sudo apt install dirmngr gnupg apt-transport-https ca-certificates software-properties-common
-          sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
-          sudo apt-add-repository 'deb https://download.mono-project.com/repo/ubuntu stable-focal main'
-          sudo apt install mono-complete
-          mono --version
+          sudo apt install --yes fsharp nunit-console
           sudo apt-get install -y libgtk2.0-cil-dev
+      - name: check mono version
+        run: mono --version
       - name: Restore packages
         run: nuget restore
       - name: Build
