--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       - name: install dependencies
         run: |
           sudo apt install --yes fsharp nunit-console
-          sudo apt-get install gtk-sharp2
+          sudo apt-get install -y libgtk2.0-cil-dev
       - name: check mono version
         run: mono --version
       - name: Restore packages
