--- a/GTK/GTK.csproj
+++ b/GTK/GTK.csproj
@@ -12,10 +12,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <FSharpTargetsPath>$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\FSharp\Microsoft.FSharp.Targets</FSharpTargetsPath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(VisualStudioVersion)' == '10.0' OR '$(VisualStudioVersion)' == '11.0'">
-    <FSharpTargetsPath>$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets</FSharpTargetsPath>
+   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   </PropertyGroup>
 
   <ItemGroup>
