--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Build
 on: [push, pull_request]
 jobs:
-  build:
+  build-for-windows:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
@@ -13,3 +13,26 @@ jobs:
         run: |
           nuget restore
           dotnet build ShapesBalanceXamFormsApp/ShapesBalanceXamFormsApp.csproj
+
+  build-for-linux:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup .NET SDK 6.0
+        uses: actions/setup-dotnet@v1
+        with:
+            dotnet-version: 6.0.x
+      - name: install dependencies
+        run: |
+          sudo apt install --yes fsharp nunit-console
+          sudo apt-get install -y libgtk2.0-cil-dev
+      - name: check mono version
+        run: mono --version
+      - name: Restore packages
+        run: nuget restore
+      - name: Build
+        run: |
+          msbuild ShapesBalanceXamFormsApp/ShapesBalanceXamFormsApp.csproj
+      - name: Build for GTK
+        run: msbuild GTK/GTK.csproj
+
